--- a/ParcialRedes/pom.xml
+++ b/ParcialRedes/pom.xml
@@ -8,18 +8,18 @@
 		<version>2.6.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.parcial.redes.david</groupId>
-	<artifactId>Arrendamientos</artifactId>
+	<groupId>com.redes.arrendamientos</groupId>
+	<artifactId>parcial</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Arrendamientos</name>
+	<name>ParcialRedes</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -27,11 +27,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
